# memchess

./: LICENSE  README.md
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  constants.ts  index.css  main.tsx  types.d.ts
client/src/components/: Auth.tsx  ChessBoard.tsx  ChessPiece.tsx  GameOver.tsx  Header.tsx  Loader.tsx  MemoryBoard.tsx  Overlay.tsx  SocketProvider.tsx
client/src/components/auth/: Auth.tsx  AvatarCreator.tsx  RoomType.tsx
client/src/components/chat/: Chat.tsx  ChatBox.tsx  ChatBubble.tsx
client/src/components/history/: History.tsx  HistoryItem.tsx
client/src/components/overlays/: ControlsOverlay.tsx  ResetGameOverlay.tsx  RoomCodeOverlay.tsx
client/src/components/toasts/: Toast.tsx  ToastProvider.tsx
client/src/components/users/: Avatar.tsx  AvatarCreator.tsx  UserCard.tsx  UserInfo.tsx
client/src/context/: GameStateProvider.tsx  HistoryProvider.tsx  SFXProvider.tsx  SocketProvider.tsx  ToastProvider.tsx
server/: .gitignore  Cargo.toml
server/src/: main.rs  memory.rs  room.rs  user.rs  util.rs
server/src/chess/: util.rs
server/src/memory/: board.rs
server/src/socket/: handlers.rs  mod.rs  state.rs
server/src/socket/handlers/: chat.rs  chess.rs  debug.rs  game.rs  memory.rs  mod.rs  room.rs  user.rs
